# two-party-eddsa-wrapper

./: README.md
client/: Cargo.toml
client/src/: lib.rs
client/src/api/: mod.rs
integration-tests/: Cargo.toml
integration-tests/src/: test.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/routes/: eddsa.rs
