[package]
name = "two-party-eddsa-client"
version = "0.1.2"
authors = ["Oded Leiba <oded@kzencorp.com>"]
edition = "2018"

[lib]
name = "two_party_eddsa_client"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
time = "0.1.42"
reqwest = "0.9.5"
failure = "0.1.5"
multi-party-ed25519 = { git = "https://github.com/KZen-networks/multi-party-eddsa", branch = "feature/libra-support" }